<resources>
    <string name="app_name" translatable="false">Fedilab</string>
    <string name="navigation_drawer_open">Open the menu</string>
    <string name="navigation_drawer_close">Close the menu</string>
    <string name="action_about">About</string>
    <string name="action_about_instance">About the instance</string>
    <string name="action_privacy">Privacy</string>
    <string name="action_cache">Cache</string>
    <string name="action_logout">Logout</string>
    <string name="login">Login</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="download_file">Download %1$s</string>
    <string name="download_over">Download complete</string>
    <string name="save_file">Save %1$s</string>
    <string name="save_over">Media saved</string>
    <string name="download_from" formatted="false">File: %1$s</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="accounts">Accounts</string>
    <string name="toots">Toots</string>
    <string name="tags">Tags</string>
    <string name="token">Token</string>
    <string name="save">Save</string>
    <string name="restore">Restore</string>
    <string name="two_factor_authentification">Two-step authentication?</string>
    <string name="no_result">No results!</string>
    <string name="instance">Instance</string>
    <string name="instance_example">Instance: mastodon.social</string>
    <string name="toast_account_changed" formatted="false">Now works with the account %1$s</string>
    <string name="add_account">Add an account</string>
    <string name="clipboard">The content of the toot has been copied to the clipboard</string>
    <string name="clipboard_url">The URL of the toot has been copied to the clipboard</string>
    <string name="change">Change</string>
    <string name="choose_picture">Select a picture…</string>
    <string name="clear">Clean</string>
    <string name="microphone">Microphone</string>
    <string name="camera">Camera</string>
    <string name="speech_prompt">Please, say something</string>
    <string name="speech_not_supported">Sorry! Your device does not support the voice input!</string>
    <string name="delete_all">Delete all</string>
    <string name="translate_toot">Translate this toot.</string>
    <string name="schedule">Schedule</string>
    <string name="text_size">Text and icon sizes</string>
    <string name="text_size_change">Change the current text size:</string>
    <string name="icon_size_change">Change the current icon size:</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="open_with">Open with</string>
    <string name="validate">Validate</string>
    <string name="media">Media</string>
    <string name="share_with">Share with</string>
    <string name="shared_via">Shared via Fedilab</string>
    <string name="replies">Replies</string>
    <string name="username">User name</string>
    <string name="drafts">Drafts</string>
    <string name="new_data">New data are available! Do you want to display them?</string>
    <string name="favourite">Favourites</string>
    <string name="follow">New followers</string>
    <string name="mention">Mentions</string>
    <string name="reblog">Boosts</string>
    <string name="show_boosts">Show boosts</string>
    <string name="show_replies">Show replies</string>
    <string name="action_open_in_web">Open in browser</string>
    <string name="translate">Translate</string>
    <string name="please_wait">Please, wait few seconds before making this action.</string>
    <string name="queets" translatable="false">Queets</string>
    <string name="home_menu">Home</string>
    <string name="local_menu">Local timeline</string>
    <string name="global_menu">Federated timeline</string>
    <string name="neutral_menu_title">Options</string>
    <string name="favorites_menu">Favourites</string>
    <string name="communication_menu_title">Communication</string>
    <string name="muted_menu">Muted users</string>
    <string name="blocked_menu">Blocked users</string>
    <string name="remote_follow_menu">Remote follow</string>
    <string name="notifications">Notifications</string>
    <string name="follow_request">Follow requests</string>
    <string name="optimization">Optimization</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="make_a_choice">What do you want to do?</string>
    <string name="delete_account_title">Delete an account</string>
    <string name="delete_account_message" formatted="false">Delete the account %1$s from the application?</string>
    <string name="send_email">Send an email</string>
    <string name="choose_file">Please select a file</string>
    <string name="choose_file_error">No file explorer found!</string>
    <string name="click_to_change">Tap on the path to change it</string>
    <string name="failed">Failed!</string>
    <string name="scheduled_toots">Scheduled toots</string>
    <string name="disclaimer_full">Information below may reflect the user\'s profile incompletely.</string>
    <string name="insert_emoji">Insert emoji</string>
    <string name="no_emoji">The app did not collect custom emojis for the moment.</string>
    <string name="live_notif">Live notifications</string>
    <string name="no_status">No toot to display</string>
    <string name="fav_added">The toot was added to favourites</string>
    <string name="fav_removed">The toot was removed from favourites!</string>
    <string name="reblog_added">The toot was boosted!</string>
    <string name="reblog_removed">The toot is no longer boosted!</string>
    <string name="reblog_by">Boosted by %1$s</string>
    <string name="favourite_add">Add this toot to your favourites?</string>
    <string name="favourite_remove">Remove this toot from your favourites?</string>
    <string name="reblog_add">Boost this toot?</string>
    <string name="reblog_remove">Unboost this toot?</string>
    <string name="pin_add">Pin this toot?</string>
    <string name="pin_remove">Unpin this toot?</string>
    <string name="more_action_1">Mute</string>
    <string name="more_action_2">Block</string>
    <string name="more_action_3">Report</string>
    <string name="more_action_4">Remove</string>
    <string name="more_action_5">Copy</string>
    <string name="more_action_6">Share</string>
    <string name="more_action_7">Mention</string>
    <string name="more_action_8">Timed mute</string>
    <string name="more_action_9">Delete &amp; re-draft</string>
    <string-array name="more_action_confirm">
        <item>Mute this account?</item>
        <item>Block this account?</item>
        <item>Report this toot?</item>
        <item>Block this domain?</item>
        <item>Unmute this account?</item>
    </string-array>
    <string-array name="action_notification">
        <item>Notify</item>
        <item>Silent</item>
    </string-array>
    <string-array name="more_action_owner_confirm">
        <item>Remove this toot?</item>
        <item>Delete &amp; re-draft this toot?</item>
    </string-array>
    <plurals name="preview_replies">
        <item quantity="one">%d reply</item>
        <item quantity="other">%d replies</item>
    </plurals>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_add">Add to bookmarks</string>
    <string name="bookmark_remove">Remove bookmark</string>
    <string name="bookmarks_empty">No bookmarks to display</string>
    <string name="status_bookmarked">Status has been added to bookmarks!</string>
    <string name="status_unbookmarked">Status was removed from bookmarks!</string>
    <string name="date_seconds">%d s</string>
    <string name="date_minutes">%d m</string>
    <string name="date_hours">%d h</string>
    <string name="date_day">%d d</string>
    <string name="toot_cw_placeholder">Warning</string>
    <string name="toot_placeholder">What is on your mind?</string>
    <string name="toot_it">TOOT!</string>
    <string name="queet_it">QUEET!</string>
    <string name="cw">cw</string>
    <string name="toot_title">Write a toot</string>
    <string name="toot_title_reply">Reply to a toot</string>
    <string name="queet_title">Write a queet</string>
    <string name="queet_title_reply">Reply to a queet</string>
    <string name="toot_no_space">You have reached the 500 characters allowed!</string>
    <string name="toot_select_image">Select a media</string>
    <string name="toot_select_image_error">An error occurred while selecting the media!</string>
    <string name="toot_delete_media">Delete this media?</string>
    <string name="toot_error_no_content">Your toot is empty!</string>
    <string name="toot_visibility_tilte">Visibility of the toot</string>
    <string name="show_reply">Tap on the button to display the original toot</string>
    <string name="settings_title_custom_sharing">Custom sharing</string>
    <string name="custom_tabs">Custom tabs</string>
    <string name="owner_cached_toots">Your toots</string>
    <string name="action_lists">Lists</string>
    <string name="action_lists_add_to">Add to list</string>
    <string name="data_export">Export statuses</string>
    <string name="proxy_set">Proxy</string>
    <string name="follow_instance">Follow instance</string>
    <string name="action_partnership">Partnerships</string>
    <string name="neutral_menu_information">Information</string>
    <string name="hide_boost">Hide boosts from %s</string>
    <string name="endorse">Feature on profile</string>
    <string name="direct_message">Direct message</string>
    <string name="filters">Filters</string>
    <string name="how_to_follow">Whom to follow</string>
    <string name="how_to_videos">How To Videos</string>
    <string name="blocked_domains">Blocked domains</string>
    <string name="block_domain">Block domain</string>
    <string name="add_remote_instance">Add an instance</string>
    <string name="peertube_favorites">Peertube favourites</string>
    <string name="channel">Channel</string>
    <string name="no_peertube_channels">No Peertube channels</string>
    <string name="no_peertube_instances">No Peertube instances</string>
    <string name="no_mastodon_instances">No Mastodon instances</string>
    <string name="no_lists">No lists</string>
    <string name="information">Information</string>
    <string name="action_bug_report">Bug Report</string>
    <string name="schedule_boost">Schedule boost</string>
    <string name="languages">Languages</string>
    <string name="show_media_only">Media only</string>
    <string name="show_media_nsfw">Show NSFW</string>
    <string name="no_pixelfed_instance">No Pixelfed instances</string>
    <string name="any_tags">Any of these</string>
    <string name="all_tags">All of these</string>
    <string name="none_tags">None of these</string>
    <string name="change_tag_column">Change column name</string>
    <string name="no_misskey_instance">No Misskey instances</string>
    <string name="upload_video">Upload</string>
    <string name="my_videos">My videos</string>
    <string name="contact">Contacts</string>
    <string name="import_data">Import Data</string>
    <string name="copy_link">Copy link</string>
    <string name="set_security_provider">Patch the Security Provider</string>
    <string name="filter_timeline_with_a_tag">Filter timeline with tags</string>
    <string name="poll">Poll</string>
    <string name="reorder_timelines">Reorder timelines</string>
    <string name="history">History</string>
    <string name="mute_conversation">Mute conversation</string>
    <string name="administration">Administration</string>
    <string name="voice_message">Voice message</string>
    <string name="action_add_notes">Add notes</string>
</resources>