<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_translate"
        android:title="@string/translate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bookmark"
        android:title="@string/bookmark_add"
        android:actionLayout="@layout/bookmark_layout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_admin"
        android:title="@string/administration"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:title="@string/information"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_browser"
        android:title="@string/action_open_in_web"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/more_action_6"
        app:showAsAction="never" />
    <item
        android:visible="false"
        android:id="@+id/action_custom_sharing"
        android:title="@string/settings_title_custom_sharing"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copy_link"
        android:title="@string/copy_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mute_conversation"
        android:title="@string/mute_conversation"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mute"
        android:title="@string/more_action_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_timed_mute"
        android:title="@string/more_action_8"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_schedule_boost"
        android:title="@string/schedule_boost"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_block"
        android:title="@string/more_action_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report"
        android:title="@string/more_action_3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_block_domain"
        android:title="@string/block_domain"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_redraft"
        android:title="@string/more_action_9"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove"
        android:title="@string/more_action_4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copy"
        android:title="@string/more_action_5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mention"
        android:title="@string/more_action_7"
        app:showAsAction="never" />

</menu>
