<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_direct_message"
        android:icon="@drawable/ic_mail_outline_toot"
        android:title="@string/direct_message"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_to_list"
        android:icon="@drawable/ic_list"
        android:title="@string/action_lists_add_to"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_open_browser"
        android:icon="@drawable/ic_open_with"
        android:title="@string/action_open_in_web"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_notes"
        android:icon="@drawable/ic_note"
        android:title="@string/action_add_notes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mute"
        android:icon="@drawable/ic_volume_mute"
        android:title="@string/more_action_1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_block"
        android:icon="@drawable/ic_block"
        android:title="@string/more_action_2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mention"
        android:icon="@drawable/ic_chat_bubble_outline"
        android:title="@string/more_action_7"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:title="@string/filter_timeline_with_a_tag"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_hide_boost"
        android:title="@string/hide_boost"
        app:showAsAction="ifRoom" />

    <!-- <item
        android:id="@+id/action_block_domain"
        android:title="@string/hide_everything"
        app:showAsAction="ifRoom" /> -->

    <item
        android:id="@+id/action_endorse"
        android:title="@string/endorse"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_follow_instance"
        android:icon="@drawable/ic_public_world"
        android:title="@string/follow_instance"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_block"
        android:title="@string/more_action_3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_block_instance"
        android:icon="@drawable/ic_block"
        android:title="@string/block_domain"
        app:showAsAction="ifRoom" />
</menu>
