<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_view_reply"
        android:icon="@drawable/ic_visibility"
        android:title="@string/show_reply"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_emoji"
        android:icon="@drawable/ic_insert_emoticon"
        android:title="@string/insert_emoji"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_photo_camera"
        android:icon="@drawable/ic_photo_camera"
        android:title="@string/camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_poll"
        android:icon="@drawable/ic_view_list_poll"
        android:title="@string/poll"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/contact"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_microphone"
        android:icon="@drawable/ic_mic"
        android:title="@string/voice_message"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_translate"
        android:icon="@drawable/ic_translate"
        android:title="@string/translate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_store"
        android:icon="@drawable/ic_save_white"
        android:title="@string/save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_restore"
        android:title="@string/restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/schedule"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tags"
        android:icon="@drawable/ic_edit_toot"
        android:title="@string/tags"
        app:showAsAction="never" />
</menu>
