<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_privacy"
        android:title="@string/action_privacy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_instance"
        android:title="@string/action_about_instance"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_size"
        android:title="@string/text_size"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cache"
        android:title="@string/action_cache"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:title="@string/data_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_proxy"
        android:title="@string/proxy_set"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
