<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy"
        android:title="@string/action_privacy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_proxy"
        android:title="@string/proxy_set"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_custom_tabs"
        android:checkable="true"
        android:title="@string/custom_tabs"
        app:actionViewClass="android.widget.CheckBox" />
    <item
        android:id="@+id/action_import_data"
        android:title="@string/import_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_provider"
        android:checkable="true"
        android:title="@string/set_security_provider"
        app:actionViewClass="android.widget.CheckBox" />
</menu>
