<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <!-- MASTODON MENU -->
        <item
            android:title="@string/communication_menu_title"
            android:id="@+id/nav_main_com"
            >
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/menu_none"
                        android:title=""
                        android:visible="false"/>
                    <item
                        android:id="@+id/nav_list"
                        android:icon="@drawable/ic_list"
                        android:title="@string/action_lists" />
                    <item
                        android:id="@+id/nav_scheduled"
                        android:icon="@drawable/ic_schedule"
                        android:title="@string/scheduled_toots" />
                    <item
                        android:id="@+id/nav_drafts"
                        android:icon="@drawable/ic_save_white"
                        android:title="@string/drafts" />
                    <item
                        android:id="@+id/nav_archive"
                        android:icon="@drawable/ic_archive"
                        android:title="@string/owner_cached_toots" />
                    <item
                        android:id="@+id/nav_bookmarks"
                        android:icon="@drawable/ic_bookmark_menu"
                        android:title="@string/bookmarks" />
                    <item
                        android:id="@+id/nav_peertube"
                        android:icon="@drawable/ic_favorite_peertube_full"
                        android:title="@string/peertube_favorites" />
                    <item
                        android:id="@+id/nav_filters"
                        android:icon="@drawable/ic_filter"
                        android:title="@string/filters" />
                    <item
                        android:id="@+id/nav_follow_request"
                        android:icon="@drawable/ic_group_add"
                        android:title="@string/follow_request" />
                    <item
                        android:id="@+id/nav_who_to_follow"
                        android:icon="@drawable/ic_people"
                        android:title="@string/how_to_follow" />
                    <item
                        android:id="@+id/nav_drag_timelines"
                        android:icon="@drawable/ic_drag_handle_menu"
                        android:title="@string/reorder_timelines" />
                </group>
            </menu>
        </item>
        <!-- PEERTUBE MENU -->
        <item
            android:title="@string/communication_menu_title"
            android:id="@+id/nav_peertube_comm"
            >
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_peertube_fav"
                        android:icon="@drawable/ic_favorite_peertube_full"
                        android:title="@string/peertube_favorites" />
                    <item
                        android:id="@+id/nav_my_video"
                        android:icon="@drawable/ic_video_library"
                        android:title="@string/my_videos" />
                    <item
                        android:id="@+id/nav_peertube_history"
                        android:icon="@drawable/ic_history_black"
                        android:title="@string/history" />
                    <item
                        android:id="@+id/nav_upload"
                        android:icon="@drawable/ic_cloud_upload"
                        android:title="@string/upload_video" />
                    <item
                        android:id="@+id/nav_peertube_notifications"
                        android:icon="@drawable/ic_notifications_peertube"
                        android:title="@string/notifications" />
                    <item
                        android:id="@+id/nav_peertube_settings"
                        android:icon="@drawable/ic_settings"
                        android:title="@string/settings" />

                </group>
            </menu>
        </item>
        <!-- PIXELFED MENU -->
        <item
            android:title="@string/communication_menu_title"
            android:id="@+id/nav_pixelfed_comm"
            >
            <menu>
                <group android:checkableBehavior="single">
                    <!--
                    <item
                        android:id="@+id/nav_peertube_fav"
                        android:icon="@drawable/ic_favorite_peertube_full"
                        android:title="@string/peertube_favorites" />
                        -->
                    <!--
                    <item
                        android:id="@+id/nav_my_photo"
                        android:icon="@drawable/ic_pixelfed_media"
                        android:title="@string/my_pictures" />
-->
                    <item
                        android:id="@+id/nav_pixelfed_favorites"
                        android:icon="@drawable/ic_pixelfed_favorite"
                        android:title="@string/favorites_menu" />
                    <item
                        android:id="@+id/nav_pixelfed_blocked"
                        android:icon="@drawable/ic_block"
                        android:title="@string/blocked_menu" />
                    <item
                        android:id="@+id/nav_pixelfed_muted"
                        android:icon="@drawable/ic_volume_mute"
                        android:title="@string/muted_menu" />
                    <!--
                    <item
                        android:id="@+id/nav_pixelfed_settings"
                        android:icon="@drawable/ic_settings"
                        android:title="@string/settings" />
                    -->
                </group>
            </menu>
        </item>
        <item
            android:title="@string/neutral_menu_title"
            android:id="@+id/nav_main_opt">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/ic_settings"
                        android:title="@string/settings" />
                    <item
                        android:id="@+id/nav_favorites"
                        android:icon="@drawable/ic_star_menu"
                        android:title="@string/favorites_menu" />
                    <item
                        android:id="@+id/nav_blocked"
                        android:icon="@drawable/ic_block"
                        android:title="@string/blocked_menu" />
                    <item
                        android:id="@+id/nav_muted"
                        android:icon="@drawable/ic_volume_mute"
                        android:title="@string/muted_menu" />
                    <item
                        android:id="@+id/nav_blocked_domains"
                        android:icon="@drawable/ic_block"
                        android:title="@string/blocked_domains" />
                    <item
                        android:id="@+id/nav_language"
                        android:icon="@drawable/ic_translate_menu"
                        android:title="@string/languages" />
                </group>
            </menu>
        </item>
        <item
            android:title="@string/neutral_menu_information"
            android:id="@+id/nav_main_info">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_opencollective"
                        android:icon="@drawable/ic_opencollective"
                        android:title="Open Collective" />
                    <item
                        android:id="@+id/nav_how_to"
                        android:icon="@drawable/ic_videocam"
                        android:title="@string/how_to_videos" />
                    <item
                        android:visible="false"
                        android:id="@+id/nav_bug_report"
                        android:icon="@drawable/ic_bug_report"
                        android:title="@string/action_bug_report" />
                    <item
                        android:id="@+id/nav_about"
                        android:icon="@drawable/ic_info"
                        android:title="@string/action_about" />
                    <item
                        android:id="@+id/nav_partnership"
                        android:icon="@drawable/ic_add_circle"
                        android:title="@string/action_partnership" />
                </group>
            </menu>
        </item>
    </group>
</menu>
