<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_instance"
        android:title="@string/add_remote_instance"
        android:icon="@drawable/ic_add_instance"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_mastodon"
        android:title="Mastodon"
        android:icon="@drawable/mastodon_icon_item"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/mastodon_instances"
                android:title="@string/no_mastodon_instances" />
        </menu>
    </item>
    <item
        android:id="@+id/action_show_peertube"
        android:title="Peertube"
        android:icon="@drawable/peertube_icon"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/peertube_instances"
                android:title="@string/no_peertube_instances" />
        </menu>
    </item>
    <item
        android:id="@+id/action_show_pixelfed"
        android:title="Pixelfed"
        android:icon="@drawable/pixelfed"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/pixelfed_instance"
                android:title="@string/no_pixelfed_instance" />
        </menu>
    </item>
    <item
        android:id="@+id/action_show_misskey"
        android:title="Misskey"
        android:icon="@drawable/misskey"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/misskey_instance"
                android:title="@string/no_misskey_instance" />
        </menu>
    </item>
    <item
        android:id="@+id/action_show_channel"
        android:title="@string/channel"
        android:icon="@drawable/ic_video_channel"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/channel_instances"
                android:title="@string/no_peertube_channels" />
        </menu>
    </item>
    <item
        android:id="@+id/action_show_list"
        android:title="@string/action_lists"
        android:icon="@drawable/ic_list_instance"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/list_instances"
                android:title="@string/no_lists" />
        </menu>
    </item>
</menu>
